[package]
name = "biter"
version = "0.0.0"
edition = "2021"
description = "BitTorrent client written in Rust"

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"
log = "0.4.20"
rand = "0.8.5"
tokio = { version = "1.33.0", features=["full"] }
reqwest = "0.11"
sha1 = "0.10.6"
urlencoding = "2.1.3"
futures = "0.3.28"
serde = { version = "1.0.190", features=["derive"] }
serde_json = "1.0.107"
expanduser = "1.2.2"
async-recursion = "1.0.5"
